--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Example13Kurs</string>
+    <string name="second_activity">Start an Activity</string>
 </resources>
