--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Example13Kurs</string>
     <string name="second_activity">Start an Activity</string>
     <string name="open_browser">Open Google Browser</string>
+    <string name="third_activity">Satrt an Third Activity</string>
 </resources>
